== Changelog ==
= 6.22.1 =
* New: Stripe, Square, PayPal, and Authorize.Net settings have now been moved to a new Payments section in Global Settings.
* Fix: The honeypot field would appear incorrectly when editing in-place.
* Fix: Field IDs would not properly update when importing a Timeline view.
* Fix: Database queries would not use cached query data when the query resulted in no results.
* Form previews are now automatically restricted to privileged users for the contact-us form key to help prevent spam.

= 6.22 =
* New: Support for Square payments has been added.
* Fix: Option validation would fail in some cases where shortcodes were used in options.
* Fix: Option validation would fail in cases where option data included unexpected additional whitespace.
* Fix: Option validation would fail in cases where field data have separate values defined for label and value, but where the separate values setting was since disabled.
* Fix: Option validation would fail in cases where the option data was modified using the_content filter.
* Fix: The global setting to check denylist data for spam would incorrectly remain checked after trying to disable it.
* Fix: The first input with an error would not focus properly when the input was a radio button or checkbox field.
* Fix: Users with access to forms but not global settings would see inbox messages but not have the proper permissions to dismiss the messages.
* Fix: Honeypot fields would not properly get hidden for forms loaded in the footer.
* Fix: An extra empty set of columns would appear for comments when exporting as CSV.
* Fix: A JavaScript error would occur for inline modals in the form builder after deleting a field.
* Fix: Too many hidden inputs would get added to the page when using the opt option in input shortcodes for a readonly checkbox field.
* Fix: Multiple forms would appear in the in-theme preview when using some WordPress themes.

= 6.21.1 =